--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,83 @@
 .App {
   text-align: center;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: cadetblue;
+  padding: 8px 12px;
+  position: sticky;
+}
+
+.nav ul {
+  display: flex;
+}
+
+.nav li {
+  padding: 8px 12px;
+}
+
+.nav li::marker {
+  content: none;
+}
+
+.gameList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.gameList li::marker {
+  content: none;
+}
+.gameList ul {
+  display: flex;
+}
+
+#screen {
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  user-select: none;
+}
+
+#screen.waiting {
+  background-color: aqua;
+}
+#screen.ready {
+  background-color: red;
+  color: white;
+}
+#screen.now {
+  background-color: greenyellow;
+}
+
+#computer {
+  width: 142px;
+  height: 200px;
+  background-position: 0 0;
+}
+
+.ball {
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  text-align: center;
+  margin-right: 20px;
+}
+
+table {
+  border-collapse: collapse;
+}
+td {
+  border: 1px solid black;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+}
