--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,8 @@
 .App {
+  width: "100%";
   text-align: center;
-}
-
-/* .nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
   align-items: center;
-  background-color: cadetblue;
-  padding: 8px 12px;
-  position: sticky;
 }
-
-.nav ul {
-  display: flex;
-  margin: 20px;
-}
-
-.nav li {
-  padding: 8px 12px;
-}
-
-.nav li::marker {
-  content: none;
-} */
 
 .gameList {
   display: flex;
@@ -94,10 +73,4 @@
   width: 60px;
   height: 60px;
   text-align: center;
-}
-
-hr {
-  width: 30px;
-  size: 2px;
-  color: #b28900;
 }
